--- a/src/components/CTA/CTA.module.css
+++ b/src/components/CTA/CTA.module.css
@@ -1,3 +1,84 @@
 .container {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 3rem;
+}
+
+.card {
+  position: relative;
+  background-image: url(../../../public/Group.jpg);
+  background-size: cover;
+  width: 80%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+  padding: 8rem;
+  border-radius: 1rem;
+  box-shadow: 0 0 1rem rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+}
+
+.card::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7); /* Ajuste o valor da opacidade (0.5) para controlar a escuridão */
+  z-index: 1;
+}
+
+.title, .description, .links {
+  position: relative; /* Garante que o texto fique acima do pseudo-elemento */
+  z-index: 2;
+}
+
+.title {
+  font-size: 5rem;
+  font-weight: 700;
+  font-family: var(--font-mooLahLah) !important;
+  color: #fff;
+  text-shadow: 0 0 .8rem rgb(0, 0, 0);
+  letter-spacing: .4rem;
+}
+
+.description {
+  color: #fff;
+  text-align: center;
+  font-weight: 600;
+  text-shadow: 0 0 1rem rgb(0, 0, 0);
+  font-size: 1.1rem;
+  width: 50%;
+}
+
+.links {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+}
+
+.button {
+  cursor: pointer;
+  color: var(--primary);
+  background-color: #fff;
+  border: var(--border);
+  font-weight: 600;
+  font-family: inherit;
+  font-size: .95rem;
+  padding: .7rem 1rem;
+  border-radius: 1.4rem;
+  margin-left: 1rem;
+  transition: background-color .2s ease-in-out, color .2s ease-in-out;
+}
+
+.button:hover {
+  background-color: var(--secondary); 
+  color: #fff;
 }
