--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -1,3 +1,59 @@
 .container {
     height: 100vh;
+    display: grid;
+    grid-template-columns: 1fr 1.5fr;
+    place-items: center;
+    gap: 2rem;
+    background-image: url(../../../public/gradient.jpg);
+    background-size: cover;
+    mask-image: linear-gradient(to bottom,
+    rgba(0, 0, 0, 0),
+    rgba(0, 0, 0, 1) 25%,
+    rgba(0, 0, 0, 1) 85%,
+    rgba(0, 0, 0, 0));
 }
+
+.content {
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
+
+.image {
+    width: 80%;
+    height: max-content;
+}
+
+.content h1 {
+    font-size: 4rem;
+    font-weight: 700;
+    font-family: var(--font-mooLahLah) !important;
+    color: #267df0;
+    letter-spacing: .3rem;
+    text-shadow: .1rem .1rem .4rem #000000;
+}
+
+.content p, .content b {
+    width: 100%;
+    color: var(--textWhite);
+    font-weight: 600;
+    font-size: 1.1rem;
+}
+
+.content p {
+    color: var(--textOpacity);
+    font-weight: 500;
+    font-size: 1rem;
+    width: 80%;
+}
+
+.link {
+    width: max-content;
+    color: var(--textWhite);
+    font-weight: 600;
+    padding: .7rem 1.5rem;
+    border-radius: 1rem;
+    cursor: pointer;
+    background-color: var(--primary);
+    transition: background-color .2s ease-in-out;
+  }
