--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -1,3 +1,20 @@
 .container {
-  height: 100vh;
+  padding: 3rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  align-items: center;
+  gap: 1rem;
+  align-items: center;
+}
+
+.disclaimer {
+  font-size: .9rem;
+  color: var(--textOpacity);
+  text-align: center;
+}
+
+.copyright {
+  color: var(--primary);
+  text-align: center;
 }
