--- a/src/components/tokenomics/tokenomics.module.css
+++ b/src/components/tokenomics/tokenomics.module.css
@@ -1,3 +1,99 @@
 .container {
   height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2rem;
+  padding: 3rem;
+}
+
+.title {
+  font-size: 5rem;
+  font-weight: 700;
+  font-family: var(--font-mooLahLah) !important;
+  background: linear-gradient(90deg, #3c52cc, #1996d9, #5a0ff1);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+  letter-spacing: .6rem;
+}
+
+.section {
+  width: 80%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 3rem;
+}
+
+.image {
+  width: 100%;
+  height: max-content;
+  border-radius: 1rem;
+  box-shadow: var(--boxShadow);
+}
+
+.contentCards {
+  display: grid;
+  gap: .7rem;
+}
+
+.button,
+.buttonBuy {
+  cursor: pointer;
+  background-color: #fff;
+  color: var(--primary);
+  border: var(--border);
+  font-weight: 600;
+  font-family: inherit;
+  font-size: .95rem;
+  padding: .5rem 1rem;
+  border-radius: 1.4rem;
+  transition: background-color .2s ease-in-out;
+} .button:hover,
+.buttonBuy:hover {
+  background-color: var(--secondary);
+  color: #fff;
+}
+
+.columns {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: .7rem;
+}
+
+.card {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: .5rem;
+  border: var(--border);
+  border-radius: 1rem;
+  padding: .7rem;
+  background: var(--card);
+  transition: background-color .3s ease-in-out;
+}
+
+.card:hover {
+  background-color: var(--primary);
+}
+
+.text {
+  text-transform: uppercase;
+  font-weight: bold;
+  color: var(--textWhite);
+  font-size: 1.1rem;
+}
+
+.text span {
+  color: #5bc4fc;
+}
+
+.value {
+  font-weight: 500;
+  color: var(--textOpacity);
+  text-align: center;
+  font-size: .95rem;
 }
