--- a/src/components/CTA/CTA.module.css
+++ b/src/components/CTA/CTA.module.css
@@ -31,12 +31,16 @@
   left: 0;
   width: 100%;
   height: 100%;
-  background: rgba(0, 0, 0, 0.7); /* Ajuste o valor da opacidade (0.5) para controlar a escuridão */
+  background: rgba(0, 0, 0, 0.7);
+  /* Ajuste o valor da opacidade (0.5) para controlar a escuridão */
   z-index: 1;
 }
 
-.title, .description, .links {
-  position: relative; /* Garante que o texto fique acima do pseudo-elemento */
+.title,
+.description,
+.links {
+  position: relative;
+  /* Garante que o texto fique acima do pseudo-elemento */
   z-index: 2;
 }
 
@@ -66,8 +70,11 @@
 
 .button {
   cursor: pointer;
-  color: var(--primary);
-  background-color: #fff;
+  display: flex;
+  align-items: center;
+  gap: .7rem;
+  background-color: var(--glass);
+  backdrop-filter: blur(1px);
   border: var(--border);
   font-weight: 600;
   font-family: inherit;
@@ -75,10 +82,38 @@
   padding: .7rem 1rem;
   border-radius: 1.4rem;
   margin-left: 1rem;
+  color: #fff;
   transition: background-color .2s ease-in-out, color .2s ease-in-out;
 }
 
 .button:hover {
-  background-color: var(--secondary); 
-  color: #fff;
+  background-color: var(--secondary);
+}
+
+@media (max-width: 768px) {
+  .container {
+    padding: 0 1rem;
+    height: 100%;
+  }
+
+  .card {
+    width: 100%;
+    padding: 5rem 1rem;
+  }
+
+  .title {
+    font-size: 2.3rem;
+    letter-spacing: .3rem;
+    text-align: center;
+  }
+
+  .description {
+    width: 100%;
+    text-align: center;
+    font-size: .9rem;
+  }
+
+  .links {
+    margin-top: .5rem;
+  }
 }
