--- a/src/components/about/about.module.css
+++ b/src/components/about/about.module.css
@@ -7,10 +7,10 @@
     background-image: url(../../../public/gradient.jpg);
     background-size: cover;
     mask-image: linear-gradient(to bottom,
-    rgba(0, 0, 0, 0),
-    rgba(0, 0, 0, 1) 25%,
-    rgba(0, 0, 0, 1) 85%,
-    rgba(0, 0, 0, 0));
+            rgba(0, 0, 0, 0),
+            rgba(0, 0, 0, 1) 25%,
+            rgba(0, 0, 0, 1) 85%,
+            rgba(0, 0, 0, 0));
 }
 
 .content {
@@ -33,7 +33,8 @@
     text-shadow: .1rem .1rem .4rem #000000;
 }
 
-.content p, .content b {
+.content p,
+.content b {
     width: 100%;
     color: var(--textWhite);
     font-weight: 600;
@@ -48,6 +49,9 @@
 }
 
 .link {
+    display: flex;
+    align-items: center;
+    gap: .7rem;
     width: max-content;
     color: var(--textWhite);
     font-weight: 600;
@@ -56,4 +60,42 @@
     cursor: pointer;
     background-color: var(--primary);
     transition: background-color .2s ease-in-out;
-  }
+}
+
+
+@media (max-width: 768px) {
+    .container {
+        position: relative;
+        grid-template-columns: 1fr;
+        height: 80vh;
+        padding: 1rem;
+    }
+
+    .image {
+        position: absolute;
+        right: 0;
+        left: auto;
+        top: 12%;
+        width: 60%;
+        opacity: .5;
+        z-index: 1;
+    }
+
+    .content {
+        z-index: 3;
+        align-items: center;
+    }
+
+    .content h1 {
+        font-size: 2.8rem;
+        text-align: center;
+    }
+
+    .content p,
+    .content b {
+        text-align: center;
+    }
+    .content p {
+        width: 100%;
+    }
+}
