--- a/src/components/footer/footer.module.css
+++ b/src/components/footer/footer.module.css
@@ -18,3 +18,9 @@
   color: var(--primary);
   text-align: center;
 }
+
+@media (max-width: 768px) {
+  .container {
+    padding: 4rem 1rem;
+  }
+}
