--- a/src/components/viewOn/viewOn.module.css
+++ b/src/components/viewOn/viewOn.module.css
@@ -65,3 +65,16 @@
   width: 2.4rem;
   height: max-content;
 }
+
+
+@media (max-width: 768px) {
+  .container {
+    width: 100%;
+    margin-top: 2rem;
+    padding: 1rem;
+  }
+  
+  .cards {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
