--- a/src/components/tokenomics/tokenomics.module.css
+++ b/src/components/tokenomics/tokenomics.module.css
@@ -57,7 +57,11 @@
   background-color: var(--secondary);
   color: #fff;
 }
-
+.buttonBuy {
+  text-align: center;
+  display: grid;
+  place-items: center;
+}
 .columns {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
@@ -93,16 +97,21 @@
   color: #5bc4fc;
 }
 
-.value {
+.value, .valueContract {
   font-weight: 500;
   color: var(--textOpacity);
   text-align: center;
   font-size: .95rem;
 }
 
+.valueContract {
+  font-size: .9rem;
+  text-wrap: wrap;
+}
+
 @media (max-width: 768px) {
   .container {
-    padding: 1rem;
+    padding: 0;
     gap: 1rem;
   }
 
@@ -114,6 +123,15 @@
 
   .image {
     width: 70%;
+  }
+
+  .card {
+    overflow: hidden;
+  }
+
+  .valueContract {
+    font-size: .7rem;
+    width: 100%;
   }
 
   .buttonBuy {
